a1/brendan_gordon/TEST_PROGRAMS/invalidtype/evan_vassallo/prog2.min
var t : string;
var x : float;
var y : int;

y = t * x;

print y;

